--- a/directbak.yaml
+++ b/directbak.yaml
@@ -929,7 +929,6 @@ payload:
   - '+.111111111.com'
   - '+.11111s.info'
   - '+.111155268.com'
-  - '+.1111biao.com'
   - '+.1113.cc'
   - '+.11160066.com'
   - '+.111com.net'
@@ -1132,6 +1131,7 @@ payload:
   - '+.123buyu.com'
   - '+.123buyu.net'
   - '+.123cha.com'
+  - '+.123ds.org'
   - '+.123du.cc'
   - '+.123ems.com'
   - '+.123fc.com'
@@ -1705,7 +1705,6 @@ payload:
   - '+.17yucai.com'
   - '+.17yund.com'
   - '+.17yy.com'
-  - '+.17yyba.com'
   - '+.17zhaogong.com'
   - '+.17zhidao.com'
   - '+.17zhiliao.com'
@@ -3082,7 +3081,6 @@ payload:
   - '+.365editor.com'
   - '+.365eme.com'
   - '+.365essay.com'
-  - '+.365exam.com'
   - '+.365f.com'
   - '+.365gangqin.com'
   - '+.365haoshu.com'
@@ -4315,7 +4313,6 @@ payload:
   - '+.51uc.com'
   - '+.51ukf.com'
   - '+.51uyi.com'
-  - '+.51uyun.com'
   - '+.51vhost.net'
   - '+.51vimeo.com'
   - '+.51vip.biz'
@@ -4454,7 +4451,6 @@ payload:
   - '+.520ldf.com'
   - '+.520link.com'
   - '+.520love520.com'
-  - '+.520meirenyu.com'
   - '+.520meirong.com'
   - '+.520mingmei.com'
   - '+.520mojing.com'
@@ -4986,7 +4982,6 @@ payload:
   - '+.58coin.com'
   - '+.58corp.com'
   - '+.58cyjm.com'
-  - '+.58czt.com'
   - '+.58dadi.com'
   - '+.58daojia.com'
   - '+.58display.com'
@@ -5854,7 +5849,6 @@ payload:
   - '+.75xyx.com'
   - '+.7618.com'
   - '+.761a.com'
-  - '+.761w.com'
   - '+.762rc.com'
   - '+.764100.com'
   - '+.7654.com'
@@ -6488,7 +6482,6 @@ payload:
   - '+.88koo.com'
   - '+.88lan.com'
   - '+.88lgo.com'
-  - '+.88lm.cc'
   - '+.88meishi.com'
   - '+.88mf.com'
   - '+.88ming.net'
@@ -8471,7 +8464,6 @@ payload:
   - '+.ali213.com'
   - '+.ali213.net'
   - '+.ali37.net'
-  - '+.ali727.com'
   - '+.aliagain.com'
   - '+.alianhome.com'
   - '+.aliapp.com'
@@ -10107,7 +10099,6 @@ payload:
   - '+.baiyiba.com'
   - '+.baiyinggd.com'
   - '+.baiyingtx.com'
-  - '+.baiyintouzi.com'
   - '+.baiyjk.com'
   - '+.baiyou100.com'
   - '+.baiyouo.com'
@@ -10271,7 +10262,6 @@ payload:
   - '+.baobeihuijia.com'
   - '+.baobeita.com'
   - '+.baobeituan.com'
-  - '+.baobidai.com'
   - '+.baocai.com'
   - '+.baocdn.com'
   - '+.baochaojianghu.com'
@@ -10909,7 +10899,6 @@ payload:
   - '+.bftq.com'
   - '+.bfttiao.com'
   - '+.bftv.com'
-  - '+.bfvyun.com'
   - '+.bfw.cc'
   - '+.bfyx.com'
   - '+.bfyx.net'
@@ -11240,7 +11229,6 @@ payload:
   - '+.biqugee.com'
   - '+.biqugeg.com'
   - '+.biqugemm.com'
-  - '+.biquger.com'
   - '+.biquges.com'
   - '+.biqugetv.com'
   - '+.biqugew.com'
@@ -11650,6 +11638,7 @@ payload:
   - '+.bjydzy.com'
   - '+.bjyestar.com'
   - '+.bjyhwy.com'
+  - '+.bjyixiaojian.com'
   - '+.bjyqsj.com'
   - '+.bjythd.com'
   - '+.bjyunyu.com'
@@ -13350,6 +13339,7 @@ payload:
   - '+.cdjsjx.com'
   - '+.cdjxjy.com'
   - '+.cdjzw.com'
+  - '+.cdjzwykj.com'
   - '+.cdjzx120.com'
   - '+.cdjzzg.com'
   - '+.cdkf.com'
@@ -16291,7 +16281,6 @@ payload:
   - '+.cnvps.com'
   - '+.cnvr-expo.com'
   - '+.cnwa.com'
-  - '+.cnwage.com'
   - '+.cnwaking.com'
   - '+.cnwaternews.com'
   - '+.cnwb.net'
@@ -17313,7 +17302,6 @@ payload:
   - '+.cufou.com'
   - '+.cug2313.com'
   - '+.cugstore.com'
-  - '+.cuihu100.com'
   - '+.cuihuan.net'
   - '+.cuimm.com'
   - '+.cuiniaoedu.com'
@@ -18540,7 +18528,6 @@ payload:
   - '+.deyiso.com'
   - '+.deyoulife.com'
   - '+.deyun.fun'
-  - '+.deyunxiangsheng.com'
   - '+.deyurumen.com'
   - '+.dezhi.com'
   - '+.dezhong365.com'
@@ -20021,7 +20008,6 @@ payload:
   - '+.duoshoubang.com'
   - '+.duoshuo.com'
   - '+.duososo.com'
-  - '+.duosq.com'
   - '+.duost.com'
   - '+.duotai.net'
   - '+.duote.com'
@@ -20310,7 +20296,6 @@ payload:
   - '+.dzzoffice.com'
   - '+.e-10031.com'
   - '+.e-3lue.com'
-  - '+.e-baby.tw'
   - '+.e-bidding.org'
   - '+.e-bq.com'
   - '+.e-bq.org'
@@ -20881,7 +20866,6 @@ payload:
   - '+.efy-tech.com'
   - '+.efyt6.com'
   - '+.egainnews.com'
-  - '+.egaoxiu.com'
   - '+.egbgedu.com'
   - '+.egcmedia.com'
   - '+.egfcare.com'
@@ -21871,7 +21855,6 @@ payload:
   - '+.fanfou.com'
   - '+.fang-zhou.com'
   - '+.fang.com'
-  - '+.fang027.com'
   - '+.fang33.com'
   - '+.fang668.com'
   - '+.fang99.cc'
@@ -22176,7 +22159,6 @@ payload:
   - '+.fd167.com'
   - '+.fd597.com'
   - '+.fd7c.com'
-  - '+.fdcing.com'
   - '+.fdcyun.com'
   - '+.fdczbstatic.com'
   - '+.fdddf.com'
@@ -23061,7 +23043,6 @@ payload:
   - '+.freericheyes.com'
   - '+.freeshoppingchina.com'
   - '+.freessl.org'
-  - '+.freetstar.com'
   - '+.freetvro.com'
   - '+.freeuid.com'
   - '+.freewhale.net'
@@ -23252,6 +23233,7 @@ payload:
   - '+.funliving.com'
   - '+.funnulldns.com'
   - '+.funnullv27.com'
+  - '+.funnullv28.com'
   - '+.funnycore.com'
   - '+.funnypicsbox.com'
   - '+.funnyplaying.com'
@@ -23318,7 +23300,6 @@ payload:
   - '+.fuzeetech.com'
   - '+.fuzegame.com'
   - '+.fuzhimao.com'
-  - '+.fuzhongvisa.com'
   - '+.fuzhugo.com'
   - '+.fview.com'
   - '+.fvti.com'
@@ -23392,7 +23373,6 @@ payload:
   - '+.fydckl.com'
   - '+.fydeos.com'
   - '+.fydmodel.com'
-  - '+.fydqw.com'
   - '+.fyeds0.com'
   - '+.fyeds1.com'
   - '+.fyeds2.com'
@@ -24420,7 +24400,6 @@ payload:
   - '+.globrand.com'
   - '+.globrand.net'
   - '+.glodon.com'
-  - '+.glorymobi.com'
   - '+.gloryre.com'
   - '+.gloryview.com'
   - '+.glorze.com'
@@ -24554,7 +24533,6 @@ payload:
   - '+.gogo.so'
   - '+.gogo123.com'
   - '+.gogoauc.com'
-  - '+.gogobids.com'
   - '+.gogofly.com'
   - '+.gogojiang.com'
   - '+.gogolinux.com'
@@ -25081,7 +25059,6 @@ payload:
   - '+.guangdiu.com'
   - '+.guangfeng.com'
   - '+.guanggao.com'
-  - '+.guanggu100.com'
   - '+.guanggua.com'
   - '+.guanghe.tv'
   - '+.guanghuayigou.com'
@@ -25253,6 +25230,7 @@ payload:
   - '+.guohanlawfirm.com'
   - '+.guohead.com'
   - '+.guohexinxiang.com'
+  - '+.guohuahouxin.com'
   - '+.guohuapharm.com'
   - '+.guoji.biz'
   - '+.guojianglive.com'
@@ -25997,6 +25975,7 @@ payload:
   - '+.hanghang666.com'
   - '+.hanghangcha.com'
   - '+.hangjiayun.com'
+  - '+.hangjizulin.com'
   - '+.hangkong.com'
   - '+.hangmiwang.com'
   - '+.hangomart.com'
@@ -26312,7 +26291,6 @@ payload:
   - '+.haoxue.com'
   - '+.haoxuetang99.com'
   - '+.haoxxwang.com'
-  - '+.haoxyx.com'
   - '+.haoyangmao8.com'
   - '+.haoyao.com'
   - '+.haoychuang.com'
@@ -26564,7 +26542,6 @@ payload:
   - '+.hbrd.net'
   - '+.hbrebond.com'
   - '+.hbrfxh.com'
-  - '+.hbrqygr.com'
   - '+.hbruicai.com'
   - '+.hbryzx.net'
   - '+.hbrzkj.com'
@@ -26674,7 +26651,6 @@ payload:
   - '+.hcshebao.com'
   - '+.hcsilk.com'
   - '+.hcsindex.org'
-  - '+.hcsip.com'
   - '+.hcstzz.com'
   - '+.hctxf.org'
   - '+.hcty.com'
@@ -26777,7 +26753,6 @@ payload:
   - '+.hebbr.com'
   - '+.hebca.com'
   - '+.hebcar.com'
-  - '+.hebchkj.com'
   - '+.hebdh.com'
   - '+.hebei.cm'
   - '+.hebeidns.com'
@@ -27270,7 +27245,6 @@ payload:
   - '+.hifiveai.com'
   - '+.hifly.mobi'
   - '+.hifly.tv'
-  - '+.hifmcloud.com'
   - '+.hifpga.com'
   - '+.hifreud.com'
   - '+.hifuntv.com'
@@ -27775,7 +27749,6 @@ payload:
   - '+.homekingcdn.com'
   - '+.homekoo.com'
   - '+.homekoocdn.com'
-  - '+.homelnns.com'
   - '+.hometeda.com'
   - '+.hometex114.com'
   - '+.hometexjoin.com'
@@ -27795,7 +27768,6 @@ payload:
   - '+.hongbizi.org'
   - '+.hongbocheng.com'
   - '+.hongbowang.net'
-  - '+.hongchalin.com'
   - '+.hongchaping.com'
   - '+.hongdaym.com'
   - '+.hongdefund.com'
@@ -28141,7 +28113,6 @@ payload:
   - '+.hshuiyi.com'
   - '+.hshw.com'
   - '+.hshy.net'
-  - '+.hshymanor.com'
   - '+.hsigus.com'
   - '+.hsiii.com'
   - '+.hsjingcheng.com'
@@ -29140,7 +29111,6 @@ payload:
   - '+.hyrainbow.com'
   - '+.hysdknb.com'
   - '+.hysec.com'
-  - '+.hysseo.com'
   - '+.hysteeltube.com'
   - '+.hyt368.com'
   - '+.hytcshare.com'
@@ -29405,7 +29375,6 @@ payload:
   - '+.iapps.im'
   - '+.iappstoday.com'
   - '+.iars-wuhan.com'
-  - '+.iartmoney.com'
   - '+.iartsee.com'
   - '+.iask-media.com'
   - '+.iask.com'
@@ -30134,6 +30103,7 @@ payload:
   - '+.ijnqc.com'
   - '+.ijogame.com'
   - '+.ijq.tv'
+  - '+.ijshs.com'
   - '+.ijsp.net'
   - '+.ijuanshi.com'
   - '+.ijuer.com'
@@ -30816,7 +30786,6 @@ payload:
   - '+.iquanba.com'
   - '+.iquanfen.com'
   - '+.iquanwai.com'
-  - '+.iqucai.com'
   - '+.iqujing.com'
   - '+.iquncha.com'
   - '+.iqunix.com'
@@ -31997,7 +31966,6 @@ payload:
   - '+.jianluote.net'
   - '+.jianmu.run'
   - '+.jianniang.com'
-  - '+.jianpage.com'
   - '+.jianpaimeiye.com'
   - '+.jianpu8.com'
   - '+.jianpu99.net'
@@ -33704,7 +33672,6 @@ payload:
   - '+.jxhyshiye.com'
   - '+.jxiaolan.com'
   - '+.jxicloud.com'
-  - '+.jxidc.net'
   - '+.jximage.com'
   - '+.jxjdgy.com'
   - '+.jxjee.com'
@@ -33723,7 +33690,6 @@ payload:
   - '+.jxold.com'
   - '+.jxorg.com'
   - '+.jxpta.com'
-  - '+.jxpz888.com'
   - '+.jxqcw.com'
   - '+.jxqgpx.com'
   - '+.jxrjzx.com'
@@ -33869,7 +33835,6 @@ payload:
   - '+.jztey.com'
   - '+.jztggs.com'
   - '+.jztmgy.com'
-  - '+.jztoo.com'
   - '+.jztsjx.com'
   - '+.jztsoft.com'
   - '+.jztvxmt.com'
@@ -33960,6 +33925,7 @@ payload:
   - '+.kaifuzq.com'
   - '+.kaige68.com'
   - '+.kaihei.co'
+  - '+.kaihu51.com'
   - '+.kaihuia.com'
   - '+.kaijia.com'
   - '+.kaijia.me'
@@ -34385,6 +34351,7 @@ payload:
   - '+.kesucorp.com'
   - '+.kesum.com'
   - '+.ketangpai.com'
+  - '+.ketingkeji.com'
   - '+.ketuimage.com'
   - '+.kevincc.xyz'
   - '+.kevinems.com'
@@ -35643,6 +35610,7 @@ payload:
   - '+.lanzoum.com'
   - '+.lanzoup.com'
   - '+.lanzouq.com'
+  - '+.lanzout.com'
   - '+.lanzouw.com'
   - '+.lanzoux.com'
   - '+.lanzun.net'
@@ -36516,6 +36484,7 @@ payload:
   - '+.lihua.com'
   - '+.lihuia.com'
   - '+.lihun66.com'
+  - '+.liigou.com'
   - '+.lijiateng.com'
   - '+.lijiejie.com'
   - '+.lijigang.com'
@@ -37084,6 +37053,7 @@ payload:
   - '+.lltoken.com'
   - '+.llwin.com'
   - '+.llwt.ink'
+  - '+.llxzu.com'
   - '+.llycloud.com'
   - '+.llzg.com'
   - '+.llzw888.com'
@@ -38142,7 +38112,6 @@ payload:
   - '+.madown.com'
   - '+.madserving.com'
   - '+.maemo.cc'
-  - '+.mafangwo.com'
   - '+.mafenggo.com'
   - '+.mafengs.com'
   - '+.mafengvwo.com'
@@ -39220,7 +39189,6 @@ payload:
   - '+.miaoweijianfei.com'
   - '+.miaowugo.com'
   - '+.miaowutech.com'
-  - '+.miaoxiakuan.com'
   - '+.miaoxiazai.com'
   - '+.miaozao.com'
   - '+.miaozhen.com'
@@ -40309,7 +40277,6 @@ payload:
   - '+.mum.cc'
   - '+.mumayi.com'
   - '+.mumu01.com'
-  - '+.mumumoo.com'
   - '+.muniao.com'
   - '+.mupceet.com'
   - '+.murdermysterypa.com'
@@ -41003,7 +40970,6 @@ payload:
   - '+.neigou.com'
   - '+.neihan8.com'
   - '+.neihanshequ.com'
-  - '+.neimengguyongli.com'
   - '+.neitui.com'
   - '+.neituixiaowangzi.com'
   - '+.neko.pub'
@@ -41503,7 +41469,6 @@ payload:
   - '+.nljb.net'
   - '+.nlpjob.com'
   - '+.nlscan.com'
-  - '+.nlv2.com'
   - '+.nlxn.com'
   - '+.nly6.com'
   - '+.nlypx.com'
@@ -41825,7 +41790,6 @@ payload:
   - '+.nvsheng.com'
   - '+.nvshengjie.com'
   - '+.nvshuyun.com'
-  - '+.nvtnet.com'
   - '+.nvude3.com'
   - '+.nvwu.com'
   - '+.nvzhanshen.com'
@@ -42897,6 +42861,7 @@ payload:
   - '+.parentshk.com'
   - '+.paris-sengfu.net'
   - '+.parkbees.com'
+  - '+.parkblop.com'
   - '+.parkchina.net'
   - '+.parkdaily.com'
   - '+.parkingjet.com'
@@ -42911,7 +42876,6 @@ payload:
   - '+.parwix.com'
   - '+.pass7.cc'
   - '+.passby.me'
-  - '+.passdesign.net'
   - '+.passer-by.com'
   - '+.passport.lenovo.com'
   - '+.passwordkeyboard.com'
@@ -43708,7 +43672,6 @@ payload:
   - '+.polycom-china.com'
   - '+.polycom-jl.com'
   - '+.polyhotel.com'
-  - '+.polyhz.com'
   - '+.polytheatre.com'
   - '+.polytheatresz.com'
   - '+.polyv.net'
@@ -44680,7 +44643,6 @@ payload:
   - '+.qihuorumen.com'
   - '+.qii404.me'
   - '+.qiigame.com'
-  - '+.qiiii.net'
   - '+.qijee.com'
   - '+.qiji.tech'
   - '+.qijiadianzi.com'
@@ -45618,7 +45580,6 @@ payload:
   - '+.quxianchang.com'
   - '+.quxiangtou.com'
   - '+.quxianzhuan.com'
-  - '+.quxiaoyuan.com'
   - '+.quxingdong.com'
   - '+.quxiu.com'
   - '+.quxuan.com'
@@ -45699,7 +45660,6 @@ payload:
   - '+.qy6.net'
   - '+.qyaaaa.com'
   - '+.qybeiyong.com'
-  - '+.qybook.net'
   - '+.qyc2008.com'
   - '+.qycn.com'
   - '+.qycn.net'
@@ -45900,7 +45860,6 @@ payload:
   - '+.rbyair.com'
   - '+.rbz1672.com'
   - '+.rbzygs.com'
-  - '+.rc0792.com'
   - '+.rc114.com'
   - '+.rc3cr.com'
   - '+.rccchina.com'
@@ -47913,6 +47872,7 @@ payload:
   - '+.shawnzeng.com'
   - '+.shayugg.com'
   - '+.shayujizhang.com'
+  - '+.shb02.com'
   - '+.shbaimeng.com'
   - '+.shbangde.com'
   - '+.shbars.com'
@@ -48258,7 +48218,6 @@ payload:
   - '+.shiqu.com'
   - '+.shiqumao.com'
   - '+.shiqutech.com'
-  - '+.shirannegar.com'
   - '+.shirleyruby.com'
   - '+.shishagame.com'
   - '+.shishangfengyun.com'
@@ -48532,7 +48491,9 @@ payload:
   - '+.shuai.win'
   - '+.shuaibo.wang'
   - '+.shuaigay.com'
+  - '+.shuaigay.org'
   - '+.shuaigay6.com'
+  - '+.shuaigay7.com'
   - '+.shuaigeshe.com'
   - '+.shuaihuajun.com'
   - '+.shuaiming.com'
@@ -50001,8 +49962,6 @@ payload:
   - '+.sqkb.com'
   - '+.sql110.com'
   - '+.sqlsec.com'
-  - '+.sqmingli.com'
-  - '+.sqmlw.com'
   - '+.sqngvd.com'
   - '+.sqrc.net'
   - '+.sqreader.com'
@@ -50787,7 +50746,6 @@ payload:
   - '+.sxrb.com'
   - '+.sxrbw.com'
   - '+.sxrczx.com'
-  - '+.sxrjcspx.com'
   - '+.sxrtv.com'
   - '+.sxsapi.com'
   - '+.sxsgs.com'
@@ -51700,7 +51658,6 @@ payload:
   - '+.tdatamaster.com'
   - '+.tdbzcl.com'
   - '+.tddmp.com'
-  - '+.tddspmall.com'
   - '+.tdfcw.com'
   - '+.tdict.com'
   - '+.tdimg.com'
@@ -53169,7 +53126,6 @@ payload:
   - '+.ttbc33.com'
   - '+.ttbcdn.com'
   - '+.ttcad.com'
-  - '+.ttcdy.com'
   - '+.ttdailynews.com'
   - '+.ttdown.com'
   - '+.ttdtweb.com'
@@ -53682,7 +53638,6 @@ payload:
   - '+.tyrad.cc'
   - '+.tyrantdb.com'
   - '+.tyread.com'
-  - '+.tyriejl.com'
   - '+.tysdmh.com'
   - '+.tysj365.com'
   - '+.tysjyjy.com'
@@ -54644,6 +54599,7 @@ payload:
   - '+.velasx.com'
   - '+.velep.com'
   - '+.velocaps.com'
+  - '+.vemarsdev.com'
   - '+.vemvm.com'
   - '+.ventoy.net'
   - '+.venucia.com'
@@ -54879,7 +54835,6 @@ payload:
   - '+.visionvera.com'
   - '+.visitsz.com'
   - '+.viskem.com'
-  - '+.vispp.net'
   - '+.vista123.com'
   - '+.vistastory.com'
   - '+.visualchina.com'
@@ -55224,7 +55179,6 @@ payload:
   - '+.w3cui.com'
   - '+.w3cways.com'
   - '+.w3pop.com'
-  - '+.w3tong.com'
   - '+.w3tt.com'
   - '+.w3xue.com'
   - '+.w7.cc'
@@ -56352,7 +56306,6 @@ payload:
   - '+.wfjimg.com'
   - '+.wfkouyaji.com'
   - '+.wflgjx.com'
-  - '+.wfluxin.com'
   - '+.wfsdf.com'
   - '+.wfun.com'
   - '+.wfuyu.com'
@@ -56835,7 +56788,6 @@ payload:
   - '+.wingconn.com'
   - '+.winglungbank.com'
   - '+.wingsbook.com'
-  - '+.wingstudio.org'
   - '+.wingtecher.com'
   - '+.winhong.com'
   - '+.winicssec.com'
@@ -57631,7 +57583,6 @@ payload:
   - '+.wukongshuo.com'
   - '+.wukongtv.com'
   - '+.wukongwenda.com'
-  - '+.wukuiwang.com'
   - '+.wukur.com'
   - '+.wukypay.com'
   - '+.wul.ai'
@@ -58388,7 +58339,6 @@ payload:
   - '+.xgzx.org'
   - '+.xh456.com'
   - '+.xhay1122.com'
-  - '+.xhbaihehang.com'
   - '+.xhbhr.com'
   - '+.xhblog.com'
   - '+.xhboke.com'
@@ -59204,7 +59154,7 @@ payload:
   - '+.xinguad.com'
   - '+.xingumin.net'
   - '+.xingxing.com'
-  - '+.xingxingmeiyu.com'
+  - '+.xingxingzu.com'
   - '+.xingyi.com'
   - '+.xingyigz.com'
   - '+.xingyongli.com'
@@ -59726,7 +59676,6 @@ payload:
   - '+.xmferry.com'
   - '+.xmfish.com'
   - '+.xmfunny.com'
-  - '+.xmgc360.com'
   - '+.xmgps.com'
   - '+.xmgsd.com'
   - '+.xmheitu.com'
@@ -59759,6 +59708,7 @@ payload:
   - '+.xmonecode.com'
   - '+.xmos.tv'
   - '+.xmpcba.com'
+  - '+.xmr-zh.com'
   - '+.xmrbi.com'
   - '+.xmsec.cc'
   - '+.xmshqh.com'
@@ -60709,7 +60659,6 @@ payload:
   - '+.yangxiaojia.me'
   - '+.yangxikun.com'
   - '+.yangxingzhen.com'
-  - '+.yangxinlife.com'
   - '+.yangyangla.com'
   - '+.yangyanxing.com'
   - '+.yangyi.vip'
@@ -60914,6 +60863,8 @@ payload:
   - '+.ycjyjt.com'
   - '+.ycku.com'
   - '+.yclh6.com'
+  - '+.ycloud.online'
+  - '+.ycloudvip.com'
   - '+.yclunwen.com'
   - '+.ycmbcd.com'
   - '+.ycnuli.com'
@@ -61194,6 +61145,7 @@ payload:
   - '+.yhfx.info'
   - '+.yhgo.wang'
   - '+.yhgo8.com'
+  - '+.yhhh8888.com'
   - '+.yhidc.com'
   - '+.yhindustrial.com'
   - '+.yhj2000.com'
@@ -61275,7 +61227,6 @@ payload:
   - '+.yidaservice.com'
   - '+.yideamobile.com'
   - '+.yidejia.com'
-  - '+.yidejr.com'
   - '+.yidejr.net'
   - '+.yidengxuetang.com'
   - '+.yidian360.com'
@@ -61952,7 +61903,6 @@ payload:
   - '+.ymq.com'
   - '+.ymraaa.com'
   - '+.ymrcw.vip'
-  - '+.yms7.com'
   - '+.ymsteam.com'
   - '+.ymstj.xyz'
   - '+.ymsxq001.xyz'
@@ -62681,6 +62631,7 @@ payload:
   - '+.ytxedu.com'
   - '+.ytxsc.com'
   - '+.ytxun.com'
+  - '+.ytyug.com'
   - '+.ytzhihui.com'
   - '+.ytzq.com'
   - '+.yu.gs'
@@ -62899,7 +62850,6 @@ payload:
   - '+.yuliechina.com'
   - '+.yulinapp.com'
   - '+.yulingtianxia.com'
-  - '+.yulingw.com'
   - '+.yulongjun.com'
   - '+.yuloo.com'
   - '+.yulore.com'
@@ -63355,7 +63305,6 @@ payload:
   - '+.yxool.com'
   - '+.yxou.com'
   - '+.yxpk.net'
-  - '+.yxpopo.com'
   - '+.yxptfs.com'
   - '+.yxqiche.com'
   - '+.yxrank.com'
@@ -64061,7 +64010,6 @@ payload:
   - '+.zgyygl.com'
   - '+.zgzcw.com'
   - '+.zgzcwy.com'
-  - '+.zgzfwm.com'
   - '+.zgzjzzs.com'
   - '+.zgzkw.com'
   - '+.zgznh.com'
@@ -64853,7 +64801,6 @@ payload:
   - '+.zhuangxiu.com'
   - '+.zhuangxiu22.com'
   - '+.zhuangxiu567.com'
-  - '+.zhuangxiu6.com'
   - '+.zhuangxiubao.com'
   - '+.zhuangxiuzhai.com'
   - '+.zhuangyi.com'
@@ -64997,7 +64944,6 @@ payload:
   - '+.zhuoshixiong.com'
   - '+.zhuotingwl.com'
   - '+.zhuotujiaoyu.com'
-  - '+.zhuoxue.cc'
   - '+.zhuoyi.com'
   - '+.zhuoyicp.com'
   - '+.zhuoyigame.com'
@@ -65246,7 +65192,6 @@ payload:
   - '+.zj.com'
   - '+.zj01.com'
   - '+.zj123.com'
-  - '+.zj12378.com'
   - '+.zj186.com'
   - '+.zj2460.com'
   - '+.zj31.net'
@@ -65529,6 +65474,7 @@ payload:
   - '+.zmirrordemo.com'
   - '+.zmister.com'
   - '+.zmjiudian.com'
+  - '+.zmkhwl.com'
   - '+.zmlearn.com'
   - '+.zmmdn.com'
   - '+.zmmoo.com'
@@ -65669,7 +65615,6 @@ payload:
   - '+.zoucheng.cc'
   - '+.zoucz.com'
   - '+.zoues.com'
-  - '+.zoujinvr.com'
   - '+.zoular.com'
   - '+.zoutu.com'
   - '+.zouzhenzhong.com'
