--- a/directbak.yaml
+++ b/directbak.yaml
@@ -9571,7 +9571,6 @@ payload:
   - '+.atobo.com'
   - '+.atomhike.com'
   - '+.atomic-art.com'
-  - '+.atomwuxi.com'
   - '+.atool.org'
   - '+.atool9.com'
   - '+.atoolbox.net'
@@ -10111,6 +10110,7 @@ payload:
   - '+.baiyuxiong.com'
   - '+.baizhan.net'
   - '+.baizhanke.com'
+  - '+.baizhanlive.com'
   - '+.baizhenzhu.com'
   - '+.baizhibest.com'
   - '+.baizhiedu.com'
@@ -10565,6 +10565,7 @@ payload:
   - '+.bdfkb.com'
   - '+.bdfzcd.net'
   - '+.bdfzgz.net'
+  - '+.bdgamelive.com'
   - '+.bdgslb.com'
   - '+.bdhuakan.com'
   - '+.bdi.pub'
@@ -11894,6 +11895,7 @@ payload:
   - '+.bohaiyun.com'
   - '+.bohe.com'
   - '+.bohuihe.com'
+  - '+.bohuitalent.com'
   - '+.bohutmt.com'
   - '+.boincdn.live'
   - '+.boiots.com'
@@ -13849,7 +13851,6 @@ payload:
   - '+.changhongit.com'
   - '+.changhongnet.com'
   - '+.changhuapower.com'
-  - '+.changingedu.com'
   - '+.changjiangdata.com'
   - '+.changjiangexpress.com'
   - '+.changjiangtimes.com'
@@ -15492,6 +15493,7 @@ payload:
   - '+.clb6.net'
   - '+.clboss.com'
   - '+.clbu.club'
+  - '+.clbug.com'
   - '+.clcindex.com'
   - '+.clclibrary.com'
   - '+.clcmw.com'
@@ -17075,6 +17077,7 @@ payload:
   - '+.csflgg.com'
   - '+.csftyy.com'
   - '+.csgm168.com'
+  - '+.csgocn.net'
   - '+.csgokai.com'
   - '+.csgpc.org'
   - '+.csgwbn.com'
@@ -17674,7 +17677,6 @@ payload:
   - '+.dachuw.net'
   - '+.dadaabc.com'
   - '+.dadaabcc.com'
-  - '+.dadabew.com'
   - '+.dadagame.com'
   - '+.dadagem.xyz'
   - '+.dadaizi.com'
@@ -24240,6 +24242,7 @@ payload:
   - '+.giftsbeijing.com'
   - '+.gifu-pr.com'
   - '+.giga-da.com'
+  - '+.giga-science.com'
   - '+.gigabyte.com'
   - '+.gigaget.com'
   - '+.giikin.com'
@@ -24340,6 +24343,7 @@ payload:
   - '+.gkzxw.com'
   - '+.gl-data.com'
   - '+.gl-inet.com'
+  - '+.gl102.com'
   - '+.gl258.com'
   - '+.glab.online'
   - '+.glamever.com'
@@ -26618,6 +26622,7 @@ payload:
   - '+.hbzqzx.com'
   - '+.hbzsb.com'
   - '+.hbzuojia.com'
+  - '+.hbzw56.com'
   - '+.hbzywh.com'
   - '+.hc-byq.com'
   - '+.hc-cdn.com'
@@ -30491,7 +30496,6 @@ payload:
   - '+.infoxmation.com'
   - '+.infzm.com'
   - '+.ing10bbs.com'
-  - '+.ing2ing.com'
   - '+.ingageapp.com'
   - '+.ingcore.com'
   - '+.ingdan.com'
@@ -32493,7 +32497,6 @@ payload:
   - '+.jiongyaya.com'
   - '+.jiou.me'
   - '+.jiouyun.com'
-  - '+.jipays.com'
   - '+.jipingacg.com'
   - '+.jipinwww.com'
   - '+.jipukeji.com'
@@ -32712,7 +32715,6 @@ payload:
   - '+.jjgsxc.com'
   - '+.jjhgamedns.com'
   - '+.jjhh.com'
-  - '+.jjhsd.com'
   - '+.jjhuifu.com'
   - '+.jjhuigou.com'
   - '+.jjhuoyan.com'
@@ -37344,7 +37346,6 @@ payload:
   - '+.loopjump.com'
   - '+.looquan.com'
   - '+.loorain.com'
-  - '+.loosun.com'
   - '+.looyu.com'
   - '+.looyuoms.com'
   - '+.looyush.com'
@@ -38305,7 +38306,6 @@ payload:
   - '+.mamicode.com'
   - '+.mamilist.com'
   - '+.mamioo.com'
-  - '+.mamipush.com'
   - '+.mamsh.org'
   - '+.managershare.com'
   - '+.manben.com'
@@ -38907,7 +38907,6 @@ payload:
   - '+.meitushop.com'
   - '+.meitustat.com'
   - '+.meituyun.com'
-  - '+.meituyunji.com'
   - '+.meiwai.net'
   - '+.meiweis.com'
   - '+.meiweishudan.com'
@@ -41733,6 +41732,7 @@ payload:
   - '+.ntvxbf7.com'
   - '+.ntwikis.com'
   - '+.ntwzy.com'
+  - '+.ntxiru.com'
   - '+.nu1l.com'
   - '+.nuan.io'
   - '+.nuandao.com'
@@ -42035,6 +42035,7 @@ payload:
   - '+.ok06.com'
   - '+.ok1616.com'
   - '+.ok165.com'
+  - '+.ok2.wang'
   - '+.ok206.com'
   - '+.ok365.com'
   - '+.ok3w.net'
@@ -46787,7 +46788,6 @@ payload:
   - '+.saiyouedu.net'
   - '+.saiyunyx.com'
   - '+.sakway.com'
-  - '+.saladns.com'
   - '+.salasolo.com'
   - '+.saleoilpaintings.com'
   - '+.salogs.com'
@@ -46914,7 +46914,6 @@ payload:
   - '+.sanyuanbaobao.com'
   - '+.sanyuantc.com'
   - '+.sanyuesha.com'
-  - '+.sanzang5.com'
   - '+.sanzang5.net'
   - '+.sanzangwang.com'
   - '+.sanzei.com'
@@ -47208,6 +47207,7 @@ payload:
   - '+.sdhsie.com'
   - '+.sdhuxiji.com'
   - '+.sdhxnykj.com'
+  - '+.sdhysyyxgs.com'
   - '+.sdiandian.com'
   - '+.sdiborn.com'
   - '+.sdicin.com'
@@ -47731,6 +47731,7 @@ payload:
   - '+.shanghaidisneyresort.com'
   - '+.shanghaiferry.com'
   - '+.shanghaihino.com'
+  - '+.shanghaihuanli.com'
   - '+.shanghaiiot.org'
   - '+.shanghaik11.com'
   - '+.shanghaimart.com'
@@ -49940,7 +49941,6 @@ payload:
   - '+.sptcc.com'
   - '+.sptccn.com'
   - '+.spthome.com'
-  - '+.sptxm.com'
   - '+.spway.net'
   - '+.spyouxi.com'
   - '+.spzs.com'
@@ -52153,7 +52153,6 @@ payload:
   - '+.tiantiancaipu.com'
   - '+.tiantianfm.com'
   - '+.tiantianfunds.com'
-  - '+.tiantianhr.com'
   - '+.tiantianleshuiguo.com'
   - '+.tiantianquce.com'
   - '+.tiantianqutao.com'
@@ -54799,6 +54798,7 @@ payload:
   - '+.viptijian.com'
   - '+.vipwaf.com'
   - '+.vipwaf.net'
+  - '+.vipwhjtsgpc.com'
   - '+.vipwm.cc'
   - '+.vipxap.com'
   - '+.vipxdns.com'
@@ -56836,7 +56836,6 @@ payload:
   - '+.wisedoo.com'
   - '+.wisedsp.net'
   - '+.wisedu.com'
-  - '+.wiseduc.com'
   - '+.wiseimp.com'
   - '+.wiselong.com'
   - '+.wisenjoy.com'
@@ -60119,6 +60118,7 @@ payload:
   - '+.xuewangzhan.net'
   - '+.xuexb.com'
   - '+.xuexi.la'
+  - '+.xuexi1234567.com'
   - '+.xuexi365.com'
   - '+.xuexi637.com'
   - '+.xuexiaodaquan.com'
@@ -60485,6 +60485,7 @@ payload:
   - '+.xzcblog.com'
   - '+.xzddx.com'
   - '+.xzdzsww.com'
+  - '+.xzfi.cc'
   - '+.xzfile.com'
   - '+.xzggjyzpw.com'
   - '+.xzgjj.com'
@@ -62190,7 +62191,6 @@ payload:
   - '+.youjingnetwork.com'
   - '+.youjiuhealth.com'
   - '+.youjoy.tv'
-  - '+.youjuke.com'
   - '+.youkake.com'
   - '+.youke.co'
   - '+.youke.com'
@@ -65413,7 +65413,6 @@ payload:
   - '+.zkyxls.com'
   - '+.zkzhkj.com'
   - '+.zkzj.org'
-  - '+.zl532.com'
   - '+.zl99.org'
   - '+.zlbaba.com'
   - '+.zlca.org'
