--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2153,7 +2153,6 @@ payload:
   - '+.21mcu.com'
   - '+.21mingshi.com'
   - '+.21mmo.com'
-  - '+.21momo.com'
   - '+.21na.com'
   - '+.21nowart.com'
   - '+.21ou.com'
@@ -2492,7 +2491,6 @@ payload:
   - '+.28rv.com'
   - '+.28sn.com'
   - '+.28tui.com'
-  - '+.28weixinqun.com'
   - '+.28y.com'
   - '+.28y3.com'
   - '+.28yj.com'
@@ -2656,7 +2654,6 @@ payload:
   - '+.313.com'
   - '+.3131tyc.com'
   - '+.313515.com'
-  - '+.31365y.com'
   - '+.3145.com'
   - '+.314pay.com'
   - '+.3150315.com'
@@ -3405,6 +3402,7 @@ payload:
   - '+.3miao.net'
   - '+.3miii.com'
   - '+.3mtw.com'
+  - '+.3mu.me'
   - '+.3n110.com'
   - '+.3nian.com'
   - '+.3png.com'
@@ -4618,6 +4616,7 @@ payload:
   - '+.52ml.net'
   - '+.52mtc.com'
   - '+.52muyou.com'
+  - '+.52myqq.com'
   - '+.52njl.com'
   - '+.52njl.net'
   - '+.52op.net'
@@ -5365,7 +5364,6 @@ payload:
   - '+.61draw.com'
   - '+.61ertong.com'
   - '+.61gequ.com'
-  - '+.61haodian.com'
   - '+.61hr.com'
   - '+.61ic.com'
   - '+.61info.com'
@@ -10502,7 +10500,6 @@ payload:
   - '+.bcbm688.com'
   - '+.bcbpm.com'
   - '+.bcbvi.com'
-  - '+.bccbcdf6shjm.com'
   - '+.bccfw.com'
   - '+.bccn.net'
   - '+.bccnsoft.com'
@@ -10633,7 +10630,6 @@ payload:
   - '+.beebeeto.com'
   - '+.beecook.com'
   - '+.beedancing.com'
-  - '+.beego.me'
   - '+.beejson.com'
   - '+.beekka.com'
   - '+.beelink.com'
@@ -17337,7 +17333,6 @@ payload:
   - '+.cuour-edu.com'
   - '+.cuour.com'
   - '+.cuour.org'
-  - '+.cuowu.com'
   - '+.cupdapp.com'
   - '+.cupdata.com'
   - '+.cupdns.com'
@@ -24208,7 +24203,6 @@ payload:
   - '+.ghostwin10.net'
   - '+.ghostwin7.net'
   - '+.ghostxp2.com'
-  - '+.ghostxp6.com'
   - '+.ghostxpsp3.net'
   - '+.ghostxx.com'
   - '+.ghproxy.com'
@@ -26402,7 +26396,6 @@ payload:
   - '+.hb-ly.com'
   - '+.hb-ws.com'
   - '+.hb-wtw.com'
-  - '+.hb-zikao.com'
   - '+.hb10000.com'
   - '+.hb10000sale.com'
   - '+.hb114.cc'
@@ -27118,7 +27111,6 @@ payload:
   - '+.hg-z.com'
   - '+.hg12333.com'
   - '+.hg1946.vip'
-  - '+.hg28a7.com'
   - '+.hg5177.com'
   - '+.hg5677.org'
   - '+.hg58.pw'
@@ -27160,7 +27152,6 @@ payload:
   - '+.hh1488.com'
   - '+.hhailuo.com'
   - '+.hhbg123.com'
-  - '+.hhcmjt.com'
   - '+.hhcn.com'
   - '+.hhczy.com'
   - '+.hhdx120.com'
@@ -27503,6 +27494,7 @@ payload:
   - '+.hljyqnj.com'
   - '+.hljzl.icu'
   - '+.hlkncse.com'
+  - '+.hlmbbs.com'
   - '+.hlmseo.com'
   - '+.hlnmg.com'
   - '+.hloong.com'
@@ -32953,7 +32945,6 @@ payload:
   - '+.jobkoo.com'
   - '+.jobksd.com'
   - '+.jobpin.com'
-  - '+.jobreading.net'
   - '+.jobsalon.net'
   - '+.jobsdigg.com'
   - '+.jobsitechina.com'
@@ -32964,7 +32955,6 @@ payload:
   - '+.jobvvv.com'
   - '+.jobyp.com'
   - '+.jocat.com'
-  - '+.jocelynlaura.com'
   - '+.joe92.com'
   - '+.joenchen.com'
   - '+.johhan.com'
@@ -33515,7 +33505,6 @@ payload:
   - '+.junshi81.com'
   - '+.junshi881.com'
   - '+.junshidao.com'
-  - '+.junshier.com'
   - '+.junshifuxin.com'
   - '+.junshijia.com'
   - '+.junshis.com'
@@ -35929,7 +35918,6 @@ payload:
   - '+.leeyuoxs.com'
   - '+.lefeng.com'
   - '+.lefengmoving.com'
-  - '+.lefengtuku.com'
   - '+.lefinance.com'
   - '+.leftfm.com'
   - '+.leftlady.com'
@@ -36250,7 +36238,6 @@ payload:
   - '+.lhsoso.com'
   - '+.lhsz.xyz'
   - '+.lhtjyy.com'
-  - '+.lhtyyt.com'
   - '+.lhwill.com'
   - '+.lhwytj.com'
   - '+.lhy1.xyz'
@@ -37395,7 +37382,6 @@ payload:
   - '+.love616.com'
   - '+.love778.com'
   - '+.love85g.com'
-  - '+.lovean.com'
   - '+.loveapp.com'
   - '+.lovebizhi.com'
   - '+.lovecia.com'
@@ -39262,7 +39248,6 @@ payload:
   - '+.miecod.com'
   - '+.miejw.com'
   - '+.miemie.la'
-  - '+.mier123.com'
   - '+.miercn.com'
   - '+.mierhuo.com'
   - '+.mieseng.com'
@@ -40393,7 +40378,6 @@ payload:
   - '+.my089.com'
   - '+.my120.org'
   - '+.my1616.net'
-  - '+.my1688.shop'
   - '+.my253537.com'
   - '+.my285.com'
   - '+.my2852.com'
@@ -41604,7 +41588,6 @@ payload:
   - '+.normcore.com'
   - '+.normstar.net'
   - '+.northdy.com'
-  - '+.northgun.com'
   - '+.northidc.net'
   - '+.northtimes.com'
   - '+.nosec.org'
@@ -44306,6 +44289,7 @@ payload:
   - '+.qdshitangchengbao.com'
   - '+.qdsntsg.com'
   - '+.qdsysj.com'
+  - '+.qdtech.ai'
   - '+.qdtgood.com'
   - '+.qdthgs.com'
   - '+.qdtongxinedu.net'
@@ -44655,7 +44639,6 @@ payload:
   - '+.qijizuopin.com'
   - '+.qijoe.com'
   - '+.qijuan.com'
-  - '+.qijuib.com'
   - '+.qik339.com'
   - '+.qikan.com'
   - '+.qikanol.com'
@@ -48373,7 +48356,6 @@ payload:
   - '+.shoujibao.net'
   - '+.shoujiduoduo.com'
   - '+.shoujihuifu.com'
-  - '+.shoujikanshu.cc'
   - '+.shoujimi.com'
   - '+.shoujitouping.com'
   - '+.shoujiwan.com'
@@ -52075,7 +52057,6 @@ payload:
   - '+.tiandaoedu.com'
   - '+.tiandi.com'
   - '+.tianditu.com'
-  - '+.tianditu.org'
   - '+.tiandizw.com'
   - '+.tianduntech.com'
   - '+.tiandy.com'
@@ -54386,7 +54367,6 @@ payload:
   - '+.uwexp.com'
   - '+.uwin100.com'
   - '+.uworter.com'
-  - '+.uwowo.com'
   - '+.ux18.com'
   - '+.ux6.com'
   - '+.ux87.com'
@@ -56503,7 +56483,6 @@ payload:
   - '+.whlybzh.com'
   - '+.whlynk.com'
   - '+.whmama.com'
-  - '+.whmcwd.com'
   - '+.whmcxh.org'
   - '+.whmeigao.com'
   - '+.whmicrocredit.com'
@@ -58079,6 +58058,7 @@ payload:
   - '+.xbiquge.la'
   - '+.xbiquge6.com'
   - '+.xbiqugew.com'
+  - '+.xbiqukan.com'
   - '+.xbiquwx.la'
   - '+.xbirder.com'
   - '+.xbjianzhan.com'
@@ -59736,6 +59716,7 @@ payload:
   - '+.xmylhy.com'
   - '+.xmysgame.com'
   - '+.xmysinter.com'
+  - '+.xmzangao.com'
   - '+.xmzdls.com'
   - '+.xmzsyg.com'
   - '+.xmzylh.com'
@@ -61157,7 +61138,6 @@ payload:
   - '+.yhkingdee.com'
   - '+.yhlbbs.com'
   - '+.yhm11.com'
-  - '+.yhmh.vip'
   - '+.yhouse.com'
   - '+.yhq368.com'
   - '+.yhqapp.com'
@@ -62370,6 +62350,7 @@ payload:
   - '+.youxizhan.com'
   - '+.youxizhongguo.com'
   - '+.youxizhuang.com'
+  - '+.youxuanan.com'
   - '+.youxuangu.com'
   - '+.youxueke.com'
   - '+.youyacao.com'
