--- a/directbak.yaml
+++ b/directbak.yaml
@@ -13568,6 +13568,7 @@ payload:
   - '+.centrincloud.com'
   - '+.centrixlink.com'
   - '+.century21cn.com'
+  - '+.cenvandns.com'
   - '+.cenwor.com'
   - '+.cenwoy.com'
   - '+.cenxilm.com'
@@ -15440,7 +15441,6 @@ payload:
   - '+.ck100.com'
   - '+.ck180.net'
   - '+.ckair.com'
-  - '+.ckck.vip'
   - '+.ckd.cc'
   - '+.ckd.so'
   - '+.ckdzb.com'
@@ -15453,7 +15453,6 @@ payload:
   - '+.ckmov.com'
   - '+.ckook.com'
   - '+.ckplayer.com'
-  - '+.ckpoo.com'
   - '+.cksd888.com'
   - '+.cksic.com'
   - '+.ckuai.com'
@@ -16544,6 +16543,7 @@ payload:
   - '+.comseoer.com'
   - '+.comsharp.com'
   - '+.comsol.com'
+  - '+.comweixin.com'
   - '+.conbagroup.com'
   - '+.conchdesktop.com'
   - '+.concox.net'
@@ -17313,7 +17313,6 @@ payload:
   - '+.cuncunle.com'
   - '+.cuncx.com'
   - '+.cunfang.com'
-  - '+.cunminyi.com'
   - '+.cunnar.com'
   - '+.cunyoulu.com'
   - '+.cunzj.com'
@@ -24984,6 +24983,7 @@ payload:
   - '+.gtm-a4b9.com'
   - '+.gtm-a5b4.com'
   - '+.gtm-i1d6.com'
+  - '+.gtm-i1d7.com'
   - '+.gtm-i1d9.com'
   - '+.gtmlufax.com'
   - '+.gtn9.com'
@@ -25763,6 +25763,7 @@ payload:
   - '+.haiboinvest.com'
   - '+.haiboyi.com'
   - '+.haicent.com'
+  - '+.haichangchina.com'
   - '+.haichufang.com'
   - '+.haici.com'
   - '+.haicj.com'
@@ -28595,7 +28596,6 @@ payload:
   - '+.huihaicn.com'
   - '+.huihedian.com'
   - '+.huihua365.com'
-  - '+.huihua8.com'
   - '+.huihuaren.com'
   - '+.huihuarensheng.com'
   - '+.huihuitech.net'
@@ -30435,6 +30435,7 @@ payload:
   - '+.ineice.com'
   - '+.inengyuan.com'
   - '+.inesa-it.com'
+  - '+.inetech.fun'
   - '+.inetgoes.com'
   - '+.inetnoc.com'
   - '+.inewhope.com'
@@ -31770,6 +31771,7 @@ payload:
   - '+.jhqshfly.com'
   - '+.jhrcbank.com'
   - '+.jhsbggw.com'
+  - '+.jhscm.com'
   - '+.jhsctv.com'
   - '+.jhsdai.com'
   - '+.jhsfojiao.com'
@@ -36036,6 +36038,7 @@ payload:
   - '+.leozwang.com'
   - '+.lepaiok.com'
   - '+.lepaowang.com'
+  - '+.lepiaoyun.com'
   - '+.leqian.com'
   - '+.lequ.com'
   - '+.lequ7.com'
@@ -52942,6 +52945,7 @@ payload:
   - '+.trippanda.com'
   - '+.tripsanxia.net'
   - '+.tripsmc.com'
+  - '+.tripurx.com'
   - '+.tripvivid.com'
   - '+.tripwirechina.com'
   - '+.triring.com'
@@ -53759,6 +53763,8 @@ payload:
   - '+.ucicq.com'
   - '+.ucjoy.com'
   - '+.uckendo.com'
+  - '+.uclmimg.com'
+  - '+.uclmjs.com'
   - '+.ucloudgda.com'
   - '+.ucloudnaming.info'
   - '+.ucly.net'
@@ -57668,7 +57674,6 @@ payload:
   - '+.www.dji.com'
   - '+.www.djivideos.com'
   - '+.www.epsonconnect.com'
-  - '+.www.ericsson.com'
   - '+.www.globalsign.com'
   - '+.www.gov.mo'
   - '+.www.htc.com'
@@ -64491,6 +64496,7 @@ payload:
   - '+.zhixingapp.com'
   - '+.zhixingbus.com'
   - '+.zhixinlu.com'
+  - '+.zhixiu.net'
   - '+.zhixuan.com'
   - '+.zhixue.com'
   - '+.zhixue.org'
@@ -65216,7 +65222,6 @@ payload:
   - '+.zjj21.com'
   - '+.zjjbtl.com'
   - '+.zjjd.org'
-  - '+.zjjdamuzhi.com'
   - '+.zjjgcyz.com'
   - '+.zjjlvxing.com'
   - '+.zjjlvyou8264.com'
@@ -65555,6 +65560,7 @@ payload:
   - '+.zoosnet.net'
   - '+.zoossoft.com'
   - '+.zoossoft.net'
+  - '+.zootope.ink'
   - '+.zootui.com'
   - '+.zooyoo.cc'
   - '+.zoroli.com'
