--- a/directbak.yaml
+++ b/directbak.yaml
@@ -478,7 +478,6 @@ payload:
   - '+.06climate.com'
   - '+.06dns.com'
   - '+.06game.com'
-  - '+.06jm.com'
   - '+.06peng.com'
   - '+.07.la'
   - '+.0701news.com'
@@ -4160,7 +4159,6 @@ payload:
   - '+.51mta.com'
   - '+.51mtw.com'
   - '+.51nac.com'
-  - '+.51nazhun.pub'
   - '+.51nb.com'
   - '+.51nicelearn.com'
   - '+.51niux.com'
@@ -6048,6 +6046,7 @@ payload:
   - '+.7ka.co'
   - '+.7kk.com'
   - '+.7kla.com'
+  - '+.7ko.com'
   - '+.7kww.net'
   - '+.7kxs.com'
   - '+.7kzw.com'
@@ -6466,7 +6465,6 @@ payload:
   - '+.88eq.com'
   - '+.88fenxiao.com'
   - '+.88h3.com'
-  - '+.88hd.tv'
   - '+.88hom.com'
   - '+.88ht.com'
   - '+.88htu.com'
@@ -9173,6 +9171,7 @@ payload:
   - '+.apmvista.com'
   - '+.apnring.com'
   - '+.apollo.auto'
+  - '+.apollocode.net'
   - '+.apollotop.com'
   - '+.apous.com'
   - '+.apowo.com'
@@ -10103,7 +10102,6 @@ payload:
   - '+.baizhanke.com'
   - '+.baizhanlive.com'
   - '+.baizhenzhu.com'
-  - '+.baizhibest.com'
   - '+.baizhiedu.com'
   - '+.baizhu.cc'
   - '+.bajiebofang.com'
@@ -13397,6 +13395,7 @@ payload:
   - '+.cdnhwc6.com'
   - '+.cdnhwchcg02.com'
   - '+.cdni.net'
+  - '+.cdnidc.net'
   - '+.cdnjtzy.com'
   - '+.cdnle.com'
   - '+.cdnle.net'
@@ -34218,6 +34217,7 @@ payload:
   - '+.kejianyi.com'
   - '+.kejietextile.com'
   - '+.kejihai.com'
+  - '+.kejihub.com'
   - '+.kejijie.net'
   - '+.kejik.com'
   - '+.kejilie.com'
@@ -36175,6 +36175,7 @@ payload:
   - '+.lgdisplayproduct.com'
   - '+.lgexam.com'
   - '+.lghsrh.com'
+  - '+.lgimg.com'
   - '+.lgmjg.com'
   - '+.lgo100.com'
   - '+.lgole.com'
@@ -41643,7 +41644,6 @@ payload:
   - '+.nssd.org'
   - '+.nsshare.com'
   - '+.nsstream.com'
-  - '+.nstom.net'
   - '+.nstooll.com'
   - '+.nsw88.com'
   - '+.nsw99.com'
@@ -41834,7 +41834,6 @@ payload:
   - '+.oa8000.com'
   - '+.oabg.net'
   - '+.oabus.net'
-  - '+.oacn.org'
   - '+.oact.net'
   - '+.oadz.com'
   - '+.oahelp.com'
@@ -44746,6 +44745,7 @@ payload:
   - '+.qingting123.com'
   - '+.qingtingfm.com'
   - '+.qingtingip.com'
+  - '+.qingtuan.tech'
   - '+.qinguanjia.com'
   - '+.qingwawa.com'
   - '+.qingwk.com'
@@ -46245,6 +46245,7 @@ payload:
   - '+.robam.com'
   - '+.robei.com'
   - '+.robook.com'
+  - '+.roborock.com'
   - '+.robot-china.com'
   - '+.robotedu.org'
   - '+.robotplaces.com'
@@ -48188,7 +48189,6 @@ payload:
   - '+.shixiseng.com'
   - '+.shixiu.net'
   - '+.shixiu.org'
-  - '+.shixun.co'
   - '+.shixunsuda.com'
   - '+.shixunwl.com'
   - '+.shiyan.com'
@@ -52606,7 +52606,6 @@ payload:
   - '+.tongxiang.net'
   - '+.tongxin.com'
   - '+.tongxin.org'
-  - '+.tongxinclub.com'
   - '+.tongxinghui.com'
   - '+.tongxinky.com'
   - '+.tongxinmao.com'
@@ -54355,6 +54354,7 @@ payload:
   - '+.uyouqu.com'
   - '+.uyshipin.com'
   - '+.uyueread.com'
+  - '+.uyun-cdn.com'
   - '+.uyunad.com'
   - '+.uyunbaby.com'
   - '+.uyuyao.com'
@@ -54370,7 +54370,6 @@ payload:
   - '+.v-56.com'
   - '+.v-beautysalon.com'
   - '+.v-danci.com'
-  - '+.v-ka.com'
   - '+.v007.net'
   - '+.v114.com'
   - '+.v1bo.com'
@@ -58353,7 +58352,6 @@ payload:
   - '+.xiagaoqing.com'
   - '+.xiagepian.com'
   - '+.xiakeol.com'
-  - '+.xialaile.com'
   - '+.xiald.com'
   - '+.xialingying.cc'
   - '+.xialv.com'
@@ -62194,6 +62192,8 @@ payload:
   - '+.youpinppt.com'
   - '+.youpinx.com'
   - '+.youpinzhekou.com'
+  - '+.youpumao.com'
+  - '+.youpumao.ink'
   - '+.youqichuyun.com'
   - '+.youqinggong.com'
   - '+.youqiwu.com'
@@ -62605,7 +62605,6 @@ payload:
   - '+.yuanjie.org'
   - '+.yuanjisong.com'
   - '+.yuanjoy.com'
-  - '+.yuanjubieshu.com'
   - '+.yuanlai.com'
   - '+.yuanlian365.com'
   - '+.yuanliao.info'
@@ -65096,7 +65095,6 @@ payload:
   - '+.zixuejie.com'
   - '+.zixuekaoshi.net'
   - '+.zixuephp.net'
-  - '+.zixuntop.com'
   - '+.ziy.cc'
   - '+.ziyadiaoyu.com'
   - '+.ziyainfo.com'
